--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
     - pip=19.1.1
     - python=3.7
-    - setuptools
+    - setuptools<58
     - nodejs
     - tensorflow-gpu=1.15.0
     - pip:
